--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "A lightweight cordova plugin for in app purchases on iOS and Android with a simple promise based API.",
   "main": "www/index-ios.js",
   "scripts": {
+    "build": "gulp",
     "test": "mocha --compilers js:babel-core/register --require babel-polyfill test/*",
     "watch": "mocha --watch --compilers js:babel-core/register --require babel-polyfill test/*",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
